--- a/public/404.html
+++ b/public/404.html
@@ -46,7 +46,7 @@
             <p>The content you&#39;re looking for doesn&#39;t seem to exist.</p>
     </main>
     <aside class="author">
-  <img class="profile-image" src="/img/profile-image.png" alt="Ryan Smerkar" />
+  <img class="profile-image" src="/img/ProfileS.jpg" alt="Ryan Smerkar" />
   <p class="name">by 
   <strong>Ryan Smerkar</strong></p>
   <p class="address">Mercyhurst University</p>
